--- a/starter-kit/server-app/manifest.yml
+++ b/starter-kit/server-app/manifest.yml
@@ -1,5 +1,5 @@
 applications:
-- name: solution-starter-kit-disasters-2020-server
+- name: ASHRAY
   random-route: true
   command: npm start
   path: .
